--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1081,10 +1081,11 @@ paper-button {
 
 paper-button[raised][filled] {
     background: #212121;
+    color: white;
 }
 
 /* Grid */
-.app-grid {
+iron-grid {
   max-width: 1200px;
   width: calc(100% - 32px);
   margin: 0 auto; }
@@ -1235,13 +1236,6 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
 .apps .cta-cell.logo-cell > div > div, .libraries .cta-cell.logo-cell > div > div {
     padding-bottom: 48px; }
 
-/* Skills section */
-.skills > .skills-cell > .skills-bar {
-  width: 100%;
-  height: 5px; }
-  .skills > .skills-cell > .skills-bar > div {
-    height: 100%; }
-
 /* Contact section */
 .contact form {
   width: 100%;
@@ -1265,38 +1259,6 @@ app-drawer-layout:not(.narrow) app-drawer app-toolbar {
   margin: 8px auto;
   border-radius: 4px; }
 
-img.author-thumb {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%; }
-
-.read-next section {
-  text-align: center; }
-
-nav.pagination {
-  color: rgba(0, 0, 0, 0.87);
-  min-height: 0;
-  text-align: center; }
-  nav.pagination > span {
-    display: inline-block;
-    margin-top: 12px; }
-  nav.pagination > a {
-    color: rgba(0, 0, 0, 0.87);
-    text-decoration: none;
-    width: 160px; }
-    nav.pagination > a.pagination-older {
-      float: left;
-      text-align: left;
-      margin-right: -160px; }
-    nav.pagination > a.pagination-newer {
-      float: right;
-      text-align: right;
-      margin-left: -160px; }
-    nav.pagination > a .mdl-button {
-      color: rgba(0, 0, 0, 0.54);
-      background-color: #e0e0e0;
-      margin: 8px; }
-
 /* Footer */
 .mdl-mini-footer {
   border-top: 1px solid rgba(0, 0, 0, 0.2);
@@ -1307,9 +1269,6 @@ nav.pagination {
 
 /* Desktop */
 @media screen and (min-width: 1025px) {
-  .mdl-layout__drawer-button {
-    display: none; }
-
   .mdl-layout__header-row {
     padding: 0 0 0 24px; } }
 /* Small tablet */
@@ -1319,11 +1278,9 @@ nav.pagination {
   .cover > .cover-inner > .mdl-typography--headline {
     font-size: 22px; }
   .cover > .cover-inner > img {
-    width: 30%; }
-
-  .read-next section h3 {
-    font-size: 28px;
-    line-height: 34px; } }
+      width: 30%;
+  }
+}
 /* Mobile */
 @media screen and (max-width: 480px) {
   .cover > .cover-inner > h1 {
