--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -44,11 +44,12 @@ paper-button {
 
     &[raised][filled] {
         background: $color-primary;
+        color: $text-color-primary-inverse;
     }
 }
 
 /* Grid */
-.app-grid {
+iron-grid {
     max-width: 1200px;
     width: calc(100% - 32px);
     margin: 0 auto;
@@ -247,15 +248,6 @@ app-drawer-layout {
     }
 }
 
-/* Skills section */
-.skills > .skills-cell > .skills-bar {
-    width: 100%;
-    height: 5px;
-    > div {
-        height: 100%;
-    }
-}
-
 /* Contact section */
 .contact form {
     width: 100%;
@@ -290,46 +282,6 @@ app-drawer-layout {
     }
 }
 
-img.author-thumb {
-    width: 36px;
-    height: 36px;
-    border-radius: 50%;
-}
-
-.read-next section {
-    text-align: center;
-}
-
-nav.pagination {
-    color: rgba($color-black, 0.87);
-    min-height: 0;
-    text-align: center;
-    > span {
-        display: inline-block;
-        margin-top: 12px;
-    }
-    > a {
-        color: rgba($color-black, 0.87);
-        text-decoration: none;
-        width: 160px;
-        &.pagination-older {
-            float: left;
-            text-align: left;
-            margin-right: -160px;
-        }
-        &.pagination-newer {
-            float: right;
-            text-align: right;
-            margin-left: -160px;
-        }
-        .mdl-button {
-            color: rgba($color-black, 0.54);
-            background-color: $palette-grey-300;
-            margin: 8px;
-        }
-    }
-}
-
 /* Footer */
 .mdl-mini-footer {
     border-top: 1px solid rgba($footer-color, 0.2);
@@ -342,9 +294,6 @@ nav.pagination {
 
 /* Desktop */
 @media screen and (min-width: 1025px) {
-    .mdl-layout__drawer-button {
-        display: none;
-    }
     .mdl-layout__header-row {
         padding: 0 0 0 24px;
     }
@@ -362,11 +311,6 @@ nav.pagination {
         > img {
             width: 30%;
         }
-    }
-
-    .read-next section h3 {
-        font-size: 28px;
-        line-height: 34px;
     }
 }
 
